unpackaged/main/default/objects/PagesApi__Fonteva_Controller_Route__mdt/PagesApi__Fonteva_Controller_Route__mdt.object-meta.xml
<CustomObject>
    <description>Lightning community routes by record id&#39;s.</description>
    <label>Fonteva Controller Route</label>
    <pluralLabel>Fonteva Controller Routes</pluralLabel>
</CustomObject>