unpackaged/main/default/objects/PagesApi__Fonteva_Controller_Route__mdt/fields/PagesApi__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Apex_Class__c</fullName>
    <description>Apex class to get record information based on route</description>
    <inlineHelpText>Apex class to get record information based on route</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>