unpackaged/main/default/objects/PagesApi__Fonteva_Controller_Route__mdt/fields/PagesApi__Component__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Component__c</fullName>
    <description>Lightning Component name without the namespace to show based on SObject route.</description>
    <inlineHelpText>Lightning Component name without the namespace to show based on SObject route.</inlineHelpText>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>