unpackaged/main/default/objects/PagesApi__Fonteva_Controller_Route__mdt/fields/PagesApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this record will become enabled as a route.</description>
    <inlineHelpText>When checked, this record will become enabled as a route.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>