unpackaged/main/default/objects/PagesApi__Fonteva_Controller_Route__mdt/fields/PagesApi__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__SObject_Name__c</fullName>
    <description>SObject name to base the route on</description>
    <inlineHelpText>SObject name to base the route on</inlineHelpText>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>